--- a/requirements.txt
+++ b/requirements.txt
@@ -1,189 +1,167 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: linux-64
-_libgcc_mutex=0.1=main
-_openmp_mutex=5.1=1_gnu
-absl-py=1.4.0=pypi_0
-altair=4.2.2=pypi_0
-appdirs=1.4.4=pypi_0
-asttokens=2.2.1=pypi_0
-astunparse=1.6.3=pypi_0
-attrs=23.1.0=pypi_0
-avro=1.10.2=pypi_0
-backcall=0.2.0=pypi_0
-beautifulsoup4=4.12.2=pypi_0
-bleach=6.0.0=pypi_0
-bokeh=2.4.3=pypi_0
-boto3=1.26.121=pypi_0
-botocore=1.29.121=pypi_0
-bs4=0.0.1=pypi_0
-ca-certificates=2023.01.10=h06a4308_0
-cachetools=5.3.0=pypi_0
-certifi=2022.12.7=pypi_0
-cffi=1.15.1=pypi_0
-charset-normalizer=3.1.0=pypi_0
-click=8.1.3=pypi_0
-colorama=0.4.6=pypi_0
-colorcet=3.0.1=pypi_0
-comm=0.1.3=pypi_0
-confluent-kafka=1.8.2=pypi_0
-contourpy=1.0.7=pypi_0
-cryptography=40.0.2=pypi_0
-cssselect=1.2.0=pypi_0
-cycler=0.11.0=pypi_0
-debugpy=1.6.7=pypi_0
-decorator=5.1.1=pypi_0
-entrypoints=0.4=pypi_0
-executing=1.2.0=pypi_0
-fake-useragent=1.1.3=pypi_0
-fastavro=1.4.11=pypi_0
-fastjsonschema=2.16.3=pypi_0
-feedparser=6.0.10=pypi_0
-flatbuffers=23.3.3=pypi_0
-fonttools=4.39.3=pypi_0
-furl=2.1.3=pypi_0
-future=0.18.3=pypi_0
-gast=0.4.0=pypi_0
-google-auth=2.17.3=pypi_0
-google-auth-oauthlib=1.0.0=pypi_0
-google-pasta=0.2.0=pypi_0
-great-expectations=0.14.12=pypi_0
-greenlet=2.0.2=pypi_0
-grpcio=1.54.0=pypi_0
-h5py=3.8.0=pypi_0
-holoviews=1.15.4=pypi_0
-hopsworks=3.0.5=pypi_0
-hsfs=3.0.5=pypi_0
-hsml=3.0.3=pypi_0
-hvplot=0.8.3=pypi_0
-idna=3.4=pypi_0
-importlib-metadata=6.6.0=pypi_0
-importlib-resources=5.12.0=pypi_0
-ipykernel=6.22.0=pypi_0
-ipython=8.12.0=pypi_0
-ipywidgets=8.0.6=pypi_0
-javaobj-py3=0.4.3=pypi_0
-jax=0.4.8=pypi_0
-jedi=0.18.2=pypi_0
-jinja2=3.0.3=pypi_0
-jmespath=1.0.1=pypi_0
-joblib=1.2.0=pypi_0
-jsonpatch=1.32=pypi_0
-jsonpointer=2.3=pypi_0
-jsonschema=4.17.3=pypi_0
-jupyter-client=8.2.0=pypi_0
-jupyter-core=5.3.0=pypi_0
-jupyterlab-widgets=3.0.7=pypi_0
-keras=2.12.0=pypi_0
-kiwisolver=1.4.4=pypi_0
-ld_impl_linux-64=2.38=h1181459_1
-libclang=16.0.0=pypi_0
-libffi=3.3=he6710b0_2
-libgcc-ng=11.2.0=h1234567_1
-libgomp=11.2.0=h1234567_1
-libstdcxx-ng=11.2.0=h1234567_1
-lxml=4.9.2=pypi_0
-markdown=3.4.3=pypi_0
-markupsafe=2.1.2=pypi_0
-matplotlib=3.7.1=pypi_0
-matplotlib-inline=0.1.6=pypi_0
-mistune=0.8.4=pypi_0
-ml-dtypes=0.1.0=pypi_0
-mock=5.0.2=pypi_0
-nbformat=5.8.0=pypi_0
-ncurses=6.4=h6a678d5_0
-nest-asyncio=1.5.6=pypi_0
-numpy=1.23.5=pypi_0
-oauthlib=3.2.2=pypi_0
-openssl=1.1.1t=h7f8727e_0
-opt-einsum=3.3.0=pypi_0
-orderedmultidict=1.0.1=pypi_0
-packaging=23.1=pypi_0
-pandas=2.0.1=pypi_0
-panel=0.14.4=pypi_0
-param=1.13.0=pypi_0
-parse=1.19.0=pypi_0
-parso=0.8.3=pypi_0
-pexpect=4.8.0=pypi_0
-pickleshare=0.7.5=pypi_0
-pillow=9.5.0=pypi_0
-pip=23.0.1=py39h06a4308_0
-platformdirs=3.5.0=pypi_0
-prompt-toolkit=3.0.38=pypi_0
-protobuf=4.22.3=pypi_0
-psutil=5.9.5=pypi_0
-ptyprocess=0.7.0=pypi_0
-pure-eval=0.2.2=pypi_0
-pyarrow=11.0.0=pypi_0
-pyasn1=0.5.0=pypi_0
-pyasn1-modules=0.3.0=pypi_0
-pycparser=2.21=pypi_0
-pycryptodomex=3.17=pypi_0
-pyct=0.5.0=pypi_0
-pyee=8.2.2=pypi_0
-pygments=2.15.1=pypi_0
-pyhopshive=0.6.4.1.dev0=pypi_0
-pyhumps=1.6.1=pypi_0
-pyjks=20.0.0=pypi_0
-pymysql=1.0.3=pypi_0
-pyparsing=2.4.7=pypi_0
-pyppeteer=1.0.2=pypi_0
-pyquery=2.0.0=pypi_0
-pyrsistent=0.19.3=pypi_0
-python=3.9.0=hdb3f193_2
-python-dateutil=2.8.2=pypi_0
-pytz=2023.3=pypi_0
-pytz-deprecation-shim=0.1.0.post0=pypi_0
-pyviz-comms=2.2.1=pypi_0
-pyyaml=6.0=pypi_0
-pyzmq=25.0.2=pypi_0
-readline=8.2=h5eee18b_0
-requests=2.29.0=pypi_0
-requests-html=0.10.0=pypi_0
-requests-oauthlib=1.3.1=pypi_0
-rsa=4.9=pypi_0
-ruamel-yaml=0.17.17=pypi_0
-ruamel-yaml-clib=0.2.7=pypi_0
-s3transfer=0.6.0=pypi_0
-scikit-learn=1.2.2=pypi_0
-scipy=1.10.1=pypi_0
-seaborn=0.12.2=pypi_0
-setuptools=66.0.0=py39h06a4308_0
-sgmllib3k=1.0.0=pypi_0
-six=1.16.0=pypi_0
-sklearn=0.0.post4=pypi_0
-soupsieve=2.4.1=pypi_0
-sqlalchemy=2.0.11=pypi_0
-sqlite=3.41.2=h5eee18b_0
-stack-data=0.6.2=pypi_0
-tensorboard=2.12.2=pypi_0
-tensorboard-data-server=0.7.0=pypi_0
-tensorboard-plugin-wit=1.8.1=pypi_0
-tensorflow=2.12.0=pypi_0
-tensorflow-estimator=2.12.0=pypi_0
-tensorflow-io-gcs-filesystem=0.32.0=pypi_0
-termcolor=2.3.0=pypi_0
-threadpoolctl=3.1.0=pypi_0
-thrift=0.16.0=pypi_0
-tk=8.6.12=h1ccaba5_0
-toolz=0.12.0=pypi_0
-tornado=6.3.1=pypi_0
-tqdm=4.65.0=pypi_0
-traitlets=5.9.0=pypi_0
-twofish=0.3.0=pypi_0
-typing-extensions=4.5.0=pypi_0
-tzdata=2023.3=pypi_0
-tzlocal=4.3=pypi_0
-urllib3=1.26.15=pypi_0
-w3lib=2.1.1=pypi_0
-wcwidth=0.2.6=pypi_0
-webencodings=0.5.1=pypi_0
-websockets=10.4=pypi_0
-werkzeug=2.3.3=pypi_0
-wheel=0.38.4=py39h06a4308_0
-widgetsnbextension=4.0.7=pypi_0
-wrapt=1.14.1=pypi_0
-xz=5.2.10=h5eee18b_1
-yahoo-fin=0.8.9.1=pypi_0
-zipp=3.15.0=pypi_0
-zlib=1.2.13=h5eee18b_0
+absl-py==1.4.0
+altair==4.2.2
+appdirs==1.4.4
+asttokens==2.2.1
+astunparse==1.6.3
+attrs==23.1.0
+avro==1.10.2
+backcall==0.2.0
+beautifulsoup4==4.12.2
+bleach==6.0.0
+bokeh==2.4.3
+boto3==1.26.121
+botocore==1.29.121
+bs4==0.0.1
+cachetools==5.3.0
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==3.1.0
+click==8.1.3
+colorama==0.4.6
+colorcet==3.0.1
+comm==0.1.3
+confluent-kafka==1.8.2
+contourpy==1.0.7
+cryptography==40.0.2
+cssselect==1.2.0
+cycler==0.11.0
+debugpy==1.6.7
+decorator==5.1.1
+entrypoints==0.4
+executing==1.2.0
+fake-useragent==1.1.3
+fastavro==1.4.11
+fastjsonschema==2.16.3
+feedparser==6.0.10
+flatbuffers==23.3.3
+fonttools==4.39.3
+furl==2.1.3
+future==0.18.3
+gast==0.4.0
+google-auth==2.17.3
+google-auth-oauthlib==1.0.0
+google-pasta==0.2.0
+great-expectations==0.14.12
+greenlet==2.0.2
+grpcio==1.54.0
+h5py==3.8.0
+holoviews==1.15.4
+hopsworks==3.0.5
+hsfs==3.0.5
+hsml==3.0.3
+hvplot==0.8.3
+idna==3.4
+importlib-metadata==6.6.0
+importlib-resources==5.12.0
+ipykernel==6.22.0
+ipython==8.12.0
+ipywidgets==8.0.6
+javaobj-py3==0.4.3
+jax==0.4.8
+jedi==0.18.2
+Jinja2==3.0.3
+jmespath==1.0.1
+joblib==1.2.0
+jsonpatch==1.32
+jsonpointer==2.3
+jsonschema==4.17.3
+jupyter_client==8.2.0
+jupyter_core==5.3.0
+jupyterlab-widgets==3.0.7
+keras==2.12.0
+kiwisolver==1.4.4
+libclang==16.0.0
+lxml==4.9.2
+Markdown==3.4.3
+MarkupSafe==2.1.2
+matplotlib==3.7.1
+matplotlib-inline==0.1.6
+mistune==0.8.4
+ml-dtypes==0.1.0
+mock==5.0.2
+nbformat==5.8.0
+nest-asyncio==1.5.6
+numpy==1.23.5
+oauthlib==3.2.2
+opt-einsum==3.3.0
+orderedmultidict==1.0.1
+packaging==23.1
+pandas==2.0.1
+panel==0.14.4
+param==1.13.0
+parse==1.19.0
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==9.5.0
+platformdirs==3.5.0
+prompt-toolkit==3.0.38
+protobuf==4.22.3
+psutil==5.9.5
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyarrow==11.0.0
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pycparser==2.21
+pycryptodomex==3.17
+pyct==0.5.0
+pyee==8.2.2
+Pygments==2.15.1
+PyHopsHive==0.6.4.1.dev0
+pyhumps==1.6.1
+pyjks==20.0.0
+PyMySQL==1.0.3
+pyparsing==2.4.7
+pyppeteer==1.0.2
+pyquery==2.0.0
+pyrsistent==0.19.3
+python-dateutil==2.8.2
+pytz==2023.3
+pytz-deprecation-shim==0.1.0.post0
+pyviz-comms==2.2.1
+PyYAML==6.0
+pyzmq==25.0.2
+requests==2.29.0
+requests-html==0.10.0
+requests-oauthlib==1.3.1
+rsa==4.9
+ruamel.yaml==0.17.17
+ruamel.yaml.clib==0.2.7
+s3transfer==0.6.0
+scikit-learn==1.2.2
+scipy==1.10.1
+seaborn==0.12.2
+sgmllib3k==1.0.0
+six==1.16.0
+sklearn==0.0.post4
+soupsieve==2.4.1
+SQLAlchemy==2.0.11
+stack-data==0.6.2
+tensorboard==2.12.2
+tensorboard-data-server==0.7.0
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.12.0
+tensorflow-estimator==2.12.0
+tensorflow-io-gcs-filesystem==0.32.0
+termcolor==2.3.0
+threadpoolctl==3.1.0
+thrift==0.16.0
+toolz==0.12.0
+tornado==6.3.1
+tqdm==4.65.0
+traitlets==5.9.0
+twofish==0.3.0
+typing_extensions==4.5.0
+tzdata==2023.3
+tzlocal==4.3
+urllib3==1.26.15
+w3lib==2.1.1
+wcwidth==0.2.6
+webencodings==0.5.1
+websockets==10.4
+Werkzeug==2.3.3
+widgetsnbextension==4.0.7
+wrapt==1.14.1
+yahoo-fin==0.8.9.1
+zipp==3.15.0
