--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ avro==1.10.2
 backcall==0.2.0
 beautifulsoup4==4.12.2
 bleach==6.0.0
+blinker==1.6.2
 bokeh==2.4.3
 boto3==1.26.121
 botocore==1.29.121
@@ -35,9 +36,12 @@ fastjsonschema==2.16.3
 feedparser==6.0.10
 flatbuffers==23.3.3
 fonttools==4.39.3
+frozendict==2.3.8
 furl==2.1.3
 future==0.18.3
 gast==0.4.0
+gitdb==4.0.10
+GitPython==3.1.31
 google-auth==2.17.3
 google-auth-oauthlib==1.0.0
 google-pasta==0.2.0
@@ -49,6 +53,7 @@ holoviews==1.15.4
 hopsworks==3.0.5
 hsfs==3.0.5
 hsml==3.0.3
+html5lib==1.1
 hvplot==0.8.3
 idna==3.4
 importlib-metadata==6.6.0
@@ -73,12 +78,15 @@ kiwisolver==1.4.4
 libclang==16.0.0
 lxml==4.9.2
 Markdown==3.4.3
-MarkupSafe==2.1.2
+markdown-it-py==2.2.0
+MarkupSafe==2.0.1
 matplotlib==3.7.1
 matplotlib-inline==0.1.6
+mdurl==0.1.2
 mistune==0.8.4
 ml-dtypes==0.1.0
 mock==5.0.2
+multitasking==0.0.11
 nbformat==5.8.0
 nest-asyncio==1.5.6
 numpy==1.23.5
@@ -96,7 +104,7 @@ pickleshare==0.7.5
 Pillow==9.5.0
 platformdirs==3.5.0
 prompt-toolkit==3.0.38
-protobuf==4.22.3
+protobuf==3.20.3
 psutil==5.9.5
 ptyprocess==0.7.0
 pure-eval==0.2.2
@@ -106,11 +114,13 @@ pyasn1-modules==0.3.0
 pycparser==2.21
 pycryptodomex==3.17
 pyct==0.5.0
+pydeck==0.8.1b0
 pyee==8.2.2
 Pygments==2.15.1
 PyHopsHive==0.6.4.1.dev0
 pyhumps==1.6.1
 pyjks==20.0.0
+Pympler==1.0.1
 PyMySQL==1.0.3
 pyparsing==2.4.7
 pyppeteer==1.0.2
@@ -125,6 +135,7 @@ pyzmq==25.0.2
 requests==2.29.0
 requests-html==0.10.0
 requests-oauthlib==1.3.1
+rich==13.3.5
 rsa==4.9
 ruamel.yaml==0.17.17
 ruamel.yaml.clib==0.2.7
@@ -135,18 +146,17 @@ seaborn==0.12.2
 sgmllib3k==1.0.0
 six==1.16.0
 sklearn==0.0.post4
+smmap==5.0.0
 soupsieve==2.4.1
 SQLAlchemy==2.0.11
 stack-data==0.6.2
-tensorboard==2.12.2
-tensorboard-data-server==0.7.0
-tensorboard-plugin-wit==1.8.1
-tensorflow==2.12.0
-tensorflow-estimator==2.12.0
-tensorflow-io-gcs-filesystem==0.32.0
+streamlit==1.22.0
+ta==0.10.2
+tenacity==8.2.2
 termcolor==2.3.0
 threadpoolctl==3.1.0
 thrift==0.16.0
+toml==0.10.2
 toolz==0.12.0
 tornado==6.3.1
 tqdm==4.65.0
@@ -156,12 +166,15 @@ typing_extensions==4.5.0
 tzdata==2023.3
 tzlocal==4.3
 urllib3==1.26.15
+validators==0.20.0
 w3lib==2.1.1
+watchdog==3.0.0
 wcwidth==0.2.6
 webencodings==0.5.1
 websockets==10.4
-Werkzeug==2.3.3
+Werkzeug==2.1.2
 widgetsnbextension==4.0.7
 wrapt==1.14.1
 yahoo-fin==0.8.9.1
+yfinance==0.2.18
 zipp==3.15.0
